--- a/src/containers/TodoContainer/components/TodoItem/style.module.css
+++ b/src/containers/TodoContainer/components/TodoItem/style.module.css
@@ -1,17 +1,21 @@
 .container {
     background: white;
+    word-break: break-all;
+    font-size: 24px;
     width: 100%;
-    margin: 10px auto;
+    padding: 15px 15px 15px 60px !important;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 5px 2px;
-    border-radius: 5px;
+    border-top: 1px solid rgba(0, 0, 0, 0.08);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+    position: relative;
 }
 
 .container p {
     margin-left: 5px;
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .container > * {
@@ -26,11 +30,19 @@
     cursor: pointer;
     margin: 0 3px;
 }
-
-.crossOver {
-    text-decoration: line-through;
+.btnCheck {
+    cursor: pointer;
+    position: absolute;
+    display: flex;
+    left: 0;
+    margin-left: 10px;
 }
 
-.faded {
-    background-color: #ddd;
+.btnClear:hover {
+    color: red;
+}
+
+.done {
+    text-decoration: line-through;
+    color: #ddd;
 }
