--- a/src/containers/TodoContainer/style.module.css
+++ b/src/containers/TodoContainer/style.module.css
@@ -1,15 +1,15 @@
 .container {
-  width: 80%;
+  width: 100%;
   background: inherit;
   display: flex;
   flex-direction: column;
-  height: 500px;
+  max-height: 500px;
   overflow-y: scroll;
   margin: 0 auto;
 }
 
 ::-webkit-scrollbar {
-  width: 2px;
+  width: 0.5px;
 }
 /* 
 ::-webkit-scrollbar-track {
